--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
     <string name="TextNumber">Roll your dice</string>
-    <string name="testing">hello world</string>
+    <string name="testing">click me</string>
     <string name="testCode1">testingCode1</string>
 </resources>
